# mpc-be-aliyun-sub

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: AliyunClient.cpp  AliyunClient.h  ConfigDialog.cpp  ConfigDialog.h  ConfigWindow.cpp  MainFilter.cpp  MainFilter.h  OverlayWindow.cpp  PluginConfig.cpp  PluginConfig.h  SubtitleOverlay.cpp  SubtitleOverlay.h  exports.def  resource.h  resource.rc
